irmaweb/irma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: irmaweb
  namespace: default
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: irmaweb
